--- a/.classpath
+++ b/.classpath
@@ -4,9 +4,9 @@
 	<classpathentry kind="src" path="blanco/main"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="var" path="ANT_HOME/lib/ant.jar"/>
-	<classpathentry kind="lib" path="lib/jxl-2.6.2blanco4.jar"/>
-	<classpathentry kind="lib" path="lib/blancocommons-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/blancoxmlbinding-0.2.0.jar"/>
-	<classpathentry kind="lib" path="lib/blancocg-1.4.5.jar"/>
+	<classpathentry kind="lib" path="lib/blancocg-2.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/blancocommons-2.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/jxl-2.6.12-java150.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
