--- a/build.xml
+++ b/build.xml
@@ -89,7 +89,7 @@
 		<echo>building jar</echo>
 
 		<!-- 定義書読込設定XMLファイル(blancoCalcParserが利用) をコピーします。 -->
-		<copy file="src/blanco/constants/BlancoConstantsMeta2Xml.xml" todir="bin/blanco/constants" />
+		<copy file="src/main/resources/blanco/constants/BlancoConstantsMeta2Xml.xml" todir="bin/blanco/constants" />
 
 		<delete file="${project.main.jar}" />
 		<jar destfile="${project.main.jar}">
@@ -110,7 +110,7 @@
 		<mkdir dir="bin" />
 		<javac destdir="bin" debug="true" source="1.6" target="1.6" fork="true" encoding="${encoding}">
 			<src path="blanco/main/" />
-			<src path="src/" />
+			<src path="src/main/java/" />
 			<classpath>
 				<!-- ワイルドカードで一括取り込み -->
 				<fileset dir="lib" includes="*.jar" />
@@ -118,19 +118,6 @@
 			</classpath>
 			<include name="**/*.java" />
 		</javac>
-	</target>
-
-	<target name="javadoc">
-		<echo>JavaDocを生成します。</echo>
-		<delete dir="javadoc" />
-		<javadoc destdir="javadoc">
-			<fileset dir="src" />
-			<fileset dir="blanco/main" />
-			<classpath>
-				<fileset dir="lib" includes="*.jar" />
-				<fileset dir="lib.ant" includes="*.jar" />
-			</classpath>
-		</javadoc>
 	</target>
 
 	<target name="meta">
