--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>blanco.constants</groupId>
 	<artifactId>blanco-constants</artifactId>
 	<packaging>jar</packaging>
-	<version>2.0.4</version>
+	<version>2.1.1</version>
 	<name>blanco-constants</name>
 	<url>https://igapyon.github.io/blancofw-maven2</url>
 
@@ -38,7 +38,7 @@
 	<repositories>
 		<repository>
 			<id>central</id>
-			<url>http://central.maven.org/maven2/</url>
+			<url>https://repo1.maven.org/maven2/</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
@@ -52,14 +52,6 @@
 	</repositories>
 
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/junit/junit -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13</version>
-			<scope>test</scope>
-		</dependency>
-
 		<dependency>
 			<groupId>blanco.anttask</groupId>
 			<artifactId>blanco-anttask</artifactId>
@@ -131,25 +123,43 @@
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
-			<version>3.13</version>
+			<version>4.1.2</version>
+<!--			<version>3.13</version>-->
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
-			<version>3.13</version>
+			<version>4.1.2</version>
+<!--			<version>3.13</version>-->
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml-schemas -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml-schemas</artifactId>
-			<version>3.13</version>
+			<version>4.1.2</version>
+<!--			<version>3.13</version>-->
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-scratchpad -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-scratchpad</artifactId>
-			<version>3.13</version>
+			<version>4.1.2</version>
+<!--			<version>3.13</version>-->
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.xmlbeans</groupId>
+			<artifactId>xmlbeans</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -213,7 +223,7 @@
 							<target>
 								<taskdef name="blancovalueobject" classname="blanco.valueobject.task.BlancoValueObjectTask" classpathref="maven.runtime.classpath">
 								</taskdef>
-								<blancovalueobject metadir="meta/program" encoding="${project.build.sourceEncoding}" sheetType="php"/>
+								<blancovalueobject metadir="meta/program" encoding="${project.build.sourceEncoding}" />
 							</target>
 						</configuration>
 						<goals>
