--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<github.global.server>github</github.global.server>
-		<git.branchName>gh-pages</git.branchName>
+		<git.branchName>gh-pages-dev</git.branchName>
 		<git.repositoryOwner>uedaueo</git.repositoryOwner>
 		<git.repositoryName>blancofw-maven2</git.repositoryName>
 		<git.isMerge>true</git.isMerge>
@@ -27,7 +27,7 @@
 		<repository>
 			<id>deploy-repository</id>
 			<name>deployRepository</name>
-			<url>file:///${project.build.directory}/gh-pages</url>
+			<url>file:///${project.build.directory}/${git.branchName}</url>
 		</repository>
 	</distributionManagement>
 
@@ -47,7 +47,7 @@
 		<repository>
 			<id>blancofw</id>
 			<name>blancofw maven repos</name>
-			<url>https://raw.github.com/uedaueo/blancofw-maven2/gh-pages/</url>
+			<url>https://raw.github.com/uedaueo/blancofw-maven2/${git.branchName}/</url>
 		</repository>
 	</repositories>
 
